Fixed double scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #2d3436;
+  overflow: hidden;
 }
 
 code {
